--- a/my-app/src/Game.module.css
+++ b/my-app/src/Game.module.css
@@ -1,13 +1,41 @@
 .game {
-	width: 200px;
-	height: 200px;
 	display: flex;
 	flex-direction: column;
-	flex-wrap: wrap;
-	text-align: center;
+	justify-content: space-evenly;
 	align-items: center;
-	justify-content: center;
-	border: 1px solid black;
+	background: linear-gradient(to bottom, #4d9ee5 0%, #868f9a 100%);
+	width: 500px;
+	height: 500px;
+	margin: 200px auto;
+	padding: 32px 16px;
+	border: 1px solid #4d9ee5;
 	border-radius: 10%;
-	gap: 20px;
+}
+
+.resetButton {
+	margin-top: 20px;
+	width: 90%;
+	height: 60px;
+	outline: none;
+	background: linear-gradient(to bottom, #4d9ee5 0%, #868f9a 100%);
+	border: 1px solid #e6ec23;
+	border-radius: 15px;
+	box-shadow: 0 0 5px #000;
+	cursor: pointer;
+	font-size: 25px;
+	user-select: none;
+	transition: 0.2s;
+}
+
+.resetButton:hover {
+	background: linear-gradient(to bottom, #e0d023 0%, #d6d2bf 100%);
+	box-shadow: 5px 5px 10px 2px;
+}
+
+.resetButton:hover:not(:active) {
+	filter: brightness(1.2);
+}
+
+.resetButton:active {
+	box-shadow: 0 0 5px #000 inset;
 }
